[tool.poetry]
name = "got"
version = "0.1.0"
description = ""
authors = ["Kilerd <blove694@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
requests-html = "^0.10.0"
urllib3 = "<1.25"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"